# ghost

./: .gitignore  LICENSE  Makefile  README.md  commit.sh  git_commit  init-db.sql  requirements.txt  test.py
.github/workflows/: rust.yml
account/: go.mod  main.go
account/dbclient/: boltclient.go
account/model/: model.go
account/service/: handlers.go  routers.go  webserver.go
airflow/: docker-compose.yml
cdr_generator/: Cargo.toml
cdr_generator/OUTPUT/: CSV20250113152324.csv  CSV20250113152405.csv  CSV20250113152417.csv
cdr_generator/src/: main.rs
config/: events-producer.yaml
csv_parser/: example.csv
deploy/: docker-compose.yaml
generator/: Dockerfile  build.sh  go.mod  go.sum  main.go
generator/dbclient/: boltclient.go  mockclient.go
generator/deploy/: generator-deployment.yaml
generator/deploy/terraform-aws/: main.tf
generator/model/: model.go
generator/service/: handlers.go  routes.go  webserver.go
kafka/: docker-compose-old2.yaml  docker-compose-old3.yaml  docker-compose-old4.yml  docker-compose_old.yml
notebooks/: store-events.ipynb
notebooks/.ipynb_checkpoints/: store-events-checkpoint.ipynb
old/deploy/terraform-aws/: main.tf
old/src/generator/: go.mod
src/events-producer/: config.ini  events-producer.py  producer.py
src/generator/: go.sum  main.go
src/generator/dbclient/: boltclient.go
src/generator/model/: model.go
store/: create-db.sql  nohup.out  producer.py
store/notebooks/: load-data.ipynb  store-events.ipynb
test/: go.mod  main.go  main_old.go  tttt
work/test_v02/: Cargo.toml  data.parquet
(+46 files in other folders)
